--- a/articles/azure-signalr/TOC.yml
+++ b/articles/azure-signalr/TOC.yml
@@ -1,63 +1,58 @@
-items:
 - name: Dokumentation för Azure SignalR Service
   href: index.yml
 - name: Översikt
   items:
-  - name: Om Azure SignalR-tjänsten
-    href: signalr-overview.md
+    - name: Om Azure SignalR-tjänsten
+      href: signalr-overview.md
 - name: Snabbstarter
   items:
-  - name: ASP.NET Core
-    href: signalr-quickstart-dotnet-core.md
-  - name: Azure Functions – JavaScript
-    href: signalr-quickstart-azure-functions-javascript.md
-  - name: Azure Functions – C#
-    href: signalr-quickstart-azure-functions-csharp.md
-  - name: REST-API
-    href: signalr-quickstart-rest-api.md
+    - name: ASP.NET Core
+      href: signalr-quickstart-dotnet-core.md
+    - name: Azure Functions – JavaScript
+      href: signalr-quickstart-azure-functions-javascript.md
+    - name: 'Azure Functions – C#'
+      href: signalr-quickstart-azure-functions-csharp.md
+    - name: REST-API
+      href: signalr-quickstart-rest-api.md
 - name: Självstudier
   items:
-  - name: Integrera med ASP.NET Core-identitet
-    href: signalr-authenticate-oauth.md
-  - name: Skapa en serverlös realtidsapp med autentisering
-    href: signalr-authenticate-azure-functions.md
+    - name: Integrera med ASP.NET Core-identitet
+      href: signalr-authenticate-oauth.md
+    - name: Skapa en serverlös realtidsapp med autentisering
+      href: signalr-authenticate-azure-functions.md
 - name: Exempel
   items:
-  - name: Kodexempel
-    href: https://github.com/aspnet/AzureSignalR-samples
-  - name: Azure CLI
-    href: signalr-cli-samples.md
+    - name: Kodexempel
+      href: 'https://github.com/aspnet/AzureSignalR-samples'
+    - name: Azure CLI
+      href: signalr-cli-samples.md
 - name: Begrepp
   items:
-  - name: Azure SignalR Service – internt
-    href: signalr-internals.md
-  - name: Skala ASP.NET Core SignalR
-    href: signalr-overview-scale-aspnet-core.md
-  - name: Skapa realtidsappar med Azure Functions
-    href: signalr-overview-azure-functions.md
-  - name: Rotering av åtkomstnyckel
-    href: signalr-key-rotation.md
-  - name: Meddelanden och anslutningar
-    href: signalr-messages.md
+    - name: Azure SignalR Service – internt
+      href: signalr-internals.md
+    - name: Skala ASP.NET Core SignalR
+      href: signalr-overview-scale-aspnet-core.md
+    - name: Skapa realtidsappar med Azure Functions
+      href: signalr-overview-azure-functions.md
+    - name: Rotering av åtkomstnyckel
+      href: signalr-key-rotation.md
+    - name: Meddelanden och anslutningar
+      href: signalr-messages.md
 - name: Resurser
   items:
-  - name: Översikt över SignalR
-    href: https://github.com/aspnet/Home/wiki/Roadmap
-  - name: Vanliga frågor och svar
-    href: signalr-faq.md
-  - name: Prissättning
-    href: https://azure.microsoft.com/pricing/details/signalr-service/
-  - name: Videoklipp
-    href: https://www.youtube.com/results?search_query=Azure+SignalR+Core
-  - name: StackOverflow
-    href: https://stackoverflow.com/search?q=signalr+service
-  - name: ASP.NET-forum
-    href: https://forums.asp.net/1254.aspx
-  - name: Twitter
-    href: https://twitter.com/SignalR
-ms.openlocfilehash: f4375cae80694d583b7f57cd76e5e17f85aca496
-ms.sourcegitcommit: 9f87a992c77bf8e3927486f8d7d1ca46aa13e849
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 12/28/2018
-ms.locfileid: "53807490"
+    - name: Översikt över SignalR
+      href: 'https://github.com/aspnet/Home/wiki/Roadmap'
+    - name: Vanliga frågor och svar
+      href: signalr-faq.md
+    - name: Nivågränser för SignalR Service-prenumerationer
+      href: 'https://docs.microsoft.com/en-us/azure/azure-subscription-service-limits#signalr-service-limits'
+    - name: Prissättning
+      href: 'https://azure.microsoft.com/pricing/details/signalr-service/'
+    - name: Videoklipp
+      href: 'https://www.youtube.com/results?search_query=Azure+SignalR+Core'
+    - name: StackOverflow
+      href: 'https://stackoverflow.com/search?q=signalr+service'
+    - name: ASP.NET-forum
+      href: 'https://forums.asp.net/1254.aspx'
+    - name: Twitter
+      href: 'https://twitter.com/SignalR'
