--- a/articles/dns/TOC.yml
+++ b/articles/dns/TOC.yml
@@ -1,156 +1,149 @@
-items:
 - name: DNS-dokumentation
   href: index.yml
 - name: Översikt
   items:
-  - name: Vad är Azure DNS?
-    href: dns-overview.md
+    - name: Vad är Azure DNS?
+      href: dns-overview.md
 - name: Snabbstarter
-  items:
-  - name: Namnmatchning – portalen
-    href: dns-getstarted-portal.md
-  - name: Namnmatchning – PowerShell
-    href: dns-getstarted-powershell.md
-  - name: Namnmatchning – CLI
-    href: dns-getstarted-cli.md
   expanded: true
+  items:
+    - name: Namnmatchning – portalen
+      href: dns-getstarted-portal.md
+    - name: Namnmatchning – PowerShell
+      href: dns-getstarted-powershell.md
+    - name: Namnmatchning – CLI
+      href: dns-getstarted-cli.md
 - name: Självstudier
   items:
-  - name: Använd Azure DNS som värd för din domän
-    href: dns-delegate-domain-azure-dns.md
-  - name: Skapa anpassade DNS-poster för en webbapp
-    href: dns-web-sites-custom-domain.md
-  - name: Skapa privat DNS-zon och -post
-    href: private-dns-getstarted-powershell.md
-  - name: Aliasposter för Traffic Manager
-    href: tutorial-alias-tm.md
-  - name: Aliasposter för offentliga IP-adresser
-    href: tutorial-alias-pip.md
-  - name: Aliasposter för zonposter
-    href: tutorial-alias-rr.md
+    - name: Använd Azure DNS som värd för din domän
+      href: dns-delegate-domain-azure-dns.md
+    - name: Skapa anpassade DNS-poster för en webbapp
+      href: dns-web-sites-custom-domain.md
+    - name: Skapa privat DNS-zon och -post
+      href: private-dns-getstarted-powershell.md
+    - name: Aliasposter för Traffic Manager
+      href: tutorial-alias-tm.md
+    - name: Aliasposter för offentliga IP-adresser
+      href: tutorial-alias-pip.md
+    - name: Aliasposter för zonposter
+      href: tutorial-alias-rr.md
 - name: Exempel
   items:
-  - name: Azure CLI
-    href: cli-samples.md
+    - name: Azure CLI
+      href: cli-samples.md
 - name: Begrepp
   items:
-  - name: DNS-zoner och -poster
-    href: dns-zones-records.md
-  - name: DNS-aliasposter
-    href: dns-alias.md
-  - name: DNS-delegering med Azure DNS
-    href: dns-domain-delegation.md
-  - name: Vanliga frågor och svar om DNS
-    href: dns-faq.md
-  - name: Använda privata DNS-zoner
-    href: private-dns-overview.md
-  - name: Privata DNS-scenarier
-    href: private-dns-scenarios.md
-  - name: DNS-mått och -aviseringar
-    href: dns-alerts-metrics.md
-  - name: Omvänt DNS
-    href: dns-reverse-dns-overview.md
-  - name: Haveriberedskap med hjälp av Azure DNS och Traffic Manager
-    href: ../networking/disaster-recovery-dns-traffic-manager.md
+    - name: Zoner och poster
+      href: dns-zones-records.md
+    - name: Aliasposter
+      href: dns-alias.md
+    - name: Delegering med Azure DNS
+      href: dns-domain-delegation.md
+    - name: VANLIGA FRÅGOR OCH SVAR
+      href: dns-faq.md
+    - name: Använda privata DNS-zoner
+      href: private-dns-overview.md
+    - name: Privata DNS-scenarier
+      href: private-dns-scenarios.md
+    - name: DNS-mått och -aviseringar
+      href: dns-alerts-metrics.md
+    - name: Omvänt DNS
+      href: dns-reverse-dns-overview.md
+    - name: Haveriberedskap med hjälp av Azure DNS och Traffic Manager
+      href: ../networking/disaster-recovery-dns-traffic-manager.md
 - name: Gör så här för att
   items:
-  - name: Skapa privat DNS-zon och -post – Azure CLI
-    href: private-dns-getstarted-cli.md
-  - name: Aliasposter för belastningsutjämnade webbappar
-    href: dns-alias-appservice.md
-  - name: Hantera DNS-zoner
-    items:
-    - name: Azure Portal
-      href: dns-operations-dnszones-portal.md
-    - name: Azure PowerShell
-      href: dns-operations-dnszones.md
-    - name: Azure CLI
-      href: dns-operations-dnszones-cli.md
-  - name: Hantera DNS-poster
-    items:
-    - name: Azure Portal
-      href: dns-operations-recordsets-portal.md
-    - name: Azure PowerShell
-      href: dns-operations-recordsets.md
-    - name: Azure CLI
-      href: dns-operations-recordsets-cli.md
-  - name: Hantera omvänd DNS
-    items:
-    - name: Hantera zoner för omvänd sökning i Azure DNS
-      href: dns-reverse-dns-hosting.md
-    - name: Hantera omvända DNS-poster för Azure-tjänster
-      href: dns-reverse-dns-for-azure-services.md
-  - name: Importera och exportera en DNS-zonfil
-    href: dns-import-export.md
-  - name: Delegera en underdomän
-    href: delegate-subdomain.md
-  - name: Integrera med andra Azure-tjänster
-    href: dns-for-azure-services.md
-  - name: Skydda DNS-zoner och -poster
-    href: dns-protect-zones-recordsets.md
-  - name: Automatisera DNS-åtgärder med DNS.NET SDK
-    href: dns-sdk.md
-  - name: Anpassade domäner för Azure-resurser
-    href: dns-custom-domain.md
-  - name: Felsöka
-    items:
-    - name: Felsökningsguide
-      href: dns-troubleshoot.md
+    - name: Skapa privat DNS-zon och -post – Azure CLI
+      href: private-dns-getstarted-cli.md
+    - name: Aliasposter för belastningsutjämnade webbappar
+      href: dns-alias-appservice.md
+    - name: Hantera DNS-zoner
+      items:
+        - name: Azure Portal
+          href: dns-operations-dnszones-portal.md
+        - name: Azure PowerShell
+          href: dns-operations-dnszones.md
+        - name: Azure CLI
+          href: dns-operations-dnszones-cli.md
+    - name: Hantera DNS-poster
+      items:
+        - name: Azure Portal
+          href: dns-operations-recordsets-portal.md
+        - name: Azure PowerShell
+          href: dns-operations-recordsets.md
+        - name: Azure CLI
+          href: dns-operations-recordsets-cli.md
+    - name: Hantera omvänd DNS
+      items:
+        - name: Hantera zoner för omvänd sökning i Azure DNS
+          href: dns-reverse-dns-hosting.md
+        - name: Hantera omvända DNS-poster för Azure-tjänster
+          href: dns-reverse-dns-for-azure-services.md
+    - name: Importera och exportera en DNS-zonfil
+      href: dns-import-export.md
+    - name: Delegera en underdomän
+      href: delegate-subdomain.md
+    - name: Integrera med andra Azure-tjänster
+      href: dns-for-azure-services.md
+    - name: Skydda DNS-zoner och -poster
+      href: dns-protect-zones-recordsets.md
+    - name: Automatisera DNS-åtgärder med DNS.NET SDK
+      href: dns-sdk.md
+    - name: Anpassade domäner för Azure-resurser
+      href: dns-custom-domain.md
+    - name: Felsöka
+      items:
+        - name: Felsökningsguide
+          href: dns-troubleshoot.md
 - name: Referens
   items:
-  - name: Kodexempel
-    href: https://azure.microsoft.com/resources/samples/?service=dns
-  - name: Azure PowerShell
-    href: /powershell/module/azurerm.dns
-  - name: Azure CLI
-    href: /cli/azure/network/dns
-  - name: .NET
-    href: /dotnet/api/microsoft.azure.management.dns.models
-  - name: Java
-    href: /java/api/com.microsoft.azure.management.dns
-  - name: Node.js
-    href: http://azure.github.io/azure-sdk-for-node/azure-arm-dns/latest/
-  - name: Ruby
-    href: http://www.rubydoc.info/gems/azure_mgmt_dns/0.8.0
-  - name: Python
-    href: http://azure-sdk-for-python.readthedocs.io/en/latest/sample_azure-mgmt-dns.html
-  - name: REST
-    href: /rest/api/dns/
-  - name: Resource Manager-mall
-    href: /azure/templates/microsoft.network/dns-allversions
+    - name: Kodexempel
+      href: 'https://azure.microsoft.com/resources/samples/?service=dns'
+    - name: Azure PowerShell
+      href: /powershell/module/azurerm.dns
+    - name: Azure CLI
+      href: /cli/azure/network/dns
+    - name: .NET
+      href: /dotnet/api/microsoft.azure.management.dns.models
+    - name: Java
+      href: /java/api/com.microsoft.azure.management.dns
+    - name: Node.js
+      href: 'http://azure.github.io/azure-sdk-for-node/azure-arm-dns/latest/'
+    - name: Ruby
+      href: 'http://www.rubydoc.info/gems/azure_mgmt_dns/0.8.0'
+    - name: Python
+      href: 'http://azure-sdk-for-python.readthedocs.io/en/latest/sample_azure-mgmt-dns.html'
+    - name: REST
+      href: /rest/api/dns/
+    - name: Resource Manager-mall
+      href: /azure/templates/microsoft.network/dns-allversions
 - name: Relaterat
   items:
-  - name: Application Gateway
-    href: /azure/application-gateway/
-  - name: Virtual Network
-    href: /azure/virtual-network/
-  - name: Virtuell dator
-    href: /azure/virtual-machines/
-  - name: Lastbalanserare
-    href: /azure/load-balancer/
-  - name: Traffic Manager
-    href: /azure/traffic-manager/
-  - name: Webbappar
-    href: /azure/app-service/
+    - name: Application Gateway
+      href: /azure/application-gateway/
+    - name: Virtual Network
+      href: /azure/virtual-network/
+    - name: Virtuell dator
+      href: /azure/virtual-machines/
+    - name: Lastbalanserare
+      href: /azure/load-balancer/
+    - name: Traffic Manager
+      href: /azure/traffic-manager/
+    - name: Webbappar
+      href: /azure/app-service/
 - name: Resurser
   items:
-  - name: Azure-översikt
-    href: https://azure.microsoft.com/roadmap/?category=networking
-  - name: Funktionsbegäranden
-    href: https://feedback.azure.com/forums/217313-networking/category/77466-domain-name-service-dns-traffic-manager
-  - name: MSDN-forum
-    href: https://social.msdn.microsoft.com/Forums/en-US/home?forum=WAVirtualMachinesVirtualNetwork
-  - name: Nätverksblogg
-    href: http://azure.microsoft.com/blog/topics/networking
-  - name: Prissättning
-    href: https://azure.microsoft.com/pricing/details/dns/
-  - name: Priskalkylator
-    href: https://azure.microsoft.com/pricing/calculator/
-  - name: Tjänstuppdateringar
-    href: https://azure.microsoft.com/updates/?product=dns
-ms.openlocfilehash: d33aefd15104bc3cd35d1c904ffdbb7c7a9f0ec8
-ms.sourcegitcommit: 9999fe6e2400cf734f79e2edd6f96a8adf118d92
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 01/22/2019
-ms.locfileid: "54428553"
+    - name: Azure-översikt
+      href: 'https://azure.microsoft.com/roadmap/?category=networking'
+    - name: Funktionsbegäranden
+      href: 'https://feedback.azure.com/forums/217313-networking/category/77466-domain-name-service-dns-traffic-manager'
+    - name: MSDN-forum
+      href: 'https://social.msdn.microsoft.com/Forums/en-US/home?forum=WAVirtualMachinesVirtualNetwork'
+    - name: Nätverksblogg
+      href: 'http://azure.microsoft.com/blog/topics/networking'
+    - name: Prissättning
+      href: 'https://azure.microsoft.com/pricing/details/dns/'
+    - name: Priskalkylator
+      href: 'https://azure.microsoft.com/pricing/calculator/'
+    - name: Tjänstuppdateringar
+      href: 'https://azure.microsoft.com/updates/?product=dns'
